mock/s3/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeroops
  labels:
    name: zeroops
    app: mock-s3-platform
